[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dialogic/Editor/MasterTree/MasterTree.gd" type="Script" id=1]

[node name="MasterTree" type="Tree"]
anchor_right = 1.0
anchor_bottom = 1.0
allow_rmb_select = true
hide_root = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenamerReset" type="Timer" parent="."]
one_shot = true

[node name="AutoSave" type="Timer" parent="."]
